--- a/package.json
+++ b/package.json
@@ -10,25 +10,33 @@
   "dependencies": {
     "@apollo/react-hoc": "^3.1.5",
     "@apollo/react-hooks": "^3.1.5",
+    "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "bootstrap": "^4.5.0",
+    "geo2zip": "^2.0.2",
     "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
     "jquery": "^3.5.1",
+    "mapbox-gl": "^1.12.0",
     "newsapi": "^2.4.0",
     "next": "9.4.1",
+    "next-compose-plugins": "^2.2.0",
     "next-router": "^1.3.6",
     "next-routes": "^1.4.2",
+    "next-transpile-modules": "^4.1.0",
     "next-with-apollo": "^5.0.1",
     "popper.js": "^1.16.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "16.13.1",
-    "react-strap": "0.0.1"
+    "react-mapbox-gl": "^4.8.6",
+    "react-strap": "0.0.1",
+    "us-zips": "^4.0.2",
+    "use-ipcoords": "^1.0.11"
   },
   "devDependencies": {
     "typescript": "^3.9.5"
